get result from the last worker

--- a/test.ipynb
+++ b/test.ipynb
@@ -4,6 +4,74 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3e181ed0f43461d94378d1f70208832",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "\n",
+    "model = AutoModel.from_pretrained(\"facebook/opt-30b\", torch_dtype=torch.float16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OPTModel(\n",
+       "  (decoder): OPTDecoder(\n",
+       "    (embed_tokens): Embedding(50272, 7168, padding_idx=1)\n",
+       "    (embed_positions): OPTLearnedPositionalEmbedding(2050, 7168)\n",
+       "    (final_layer_norm): LayerNorm((7168,), eps=1e-05, elementwise_affine=True)\n",
+       "    (layers): ModuleList(\n",
+       "      (0-47): 48 x OPTDecoderLayer(\n",
+       "        (self_attn): OPTAttention(\n",
+       "          (k_proj): Linear(in_features=7168, out_features=7168, bias=True)\n",
+       "          (v_proj): Linear(in_features=7168, out_features=7168, bias=True)\n",
+       "          (q_proj): Linear(in_features=7168, out_features=7168, bias=True)\n",
+       "          (out_proj): Linear(in_features=7168, out_features=7168, bias=True)\n",
+       "        )\n",
+       "        (activation_fn): ReLU()\n",
+       "        (self_attn_layer_norm): LayerNorm((7168,), eps=1e-05, elementwise_affine=True)\n",
+       "        (fc1): Linear(in_features=7168, out_features=28672, bias=True)\n",
+       "        (fc2): Linear(in_features=28672, out_features=7168, bias=True)\n",
+       "        (final_layer_norm): LayerNorm((7168,), eps=1e-05, elementwise_affine=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from vllm import LLM, SamplingParams\n",
